# rag-healthbot

./: .gitignore  package-lock.json  package.json  tsconfig.json
server/: README.md  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 11c756444b97_initial_migration.py  442b23c29265_add_confidence_review_columns_and_code_.py  4ceaf3bd7ecf_add_is_drug_class_to_medication.py  6387eefc110d_add_disease_procedure_tables_and_.py  94e89ecc4829_add_review_cols_to_join_tables.py  b7a2d9b9c0f1_alter_report_embedding_vector_dim_to_1024.py  c3e1a4f2d7ab_add_report_hashes_for_dedup.py  d1f2c8a7b9e1_add_conversation_table.py  e7f3a2b1c8d9_unique_extracted_text_hash_partial.py  f5db3ce475b5_creating_emedding_table_adding_pg_vector.py
server/src/: config.py  db.py  main.py
server/src/Models/: Medication.py  Report.py  ReportMedication.py
server/src/Workers/: rq_worker.py
server/src/rag_healthbot_server/: cli.py  config.py  db.py  main.py
server/src/rag_healthbot_server/Models/: CodeEmbedding.py  Conversation.py  Disease.py  Medication.py  Procedure.py  Report.py  ReportDisease.py  ReportEmbedding.py  ReportMedication.py  ReportProcedure.py  __init__.py
server/src/rag_healthbot_server/Workers/: metrics_worker.py  rq_worker.py
server/src/rag_healthbot_server/routers/: chat.py  conversations.py  report.py  review.py
server/src/rag_healthbot_server/utilities/: backfill_codes.py  base64_utils.py  confidence.py  cpt_lookup.py  hashing.py  icd10_lookup.py  index_codes.py  kb_search.py  medication_normalization.py  report_dedup.py  report_persistence.py  (+3 more)
(+56 files in other folders)
