[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "prometheus-client>=0.24.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
